Portal good enough

--- a/static/index.html
+++ b/static/index.html
@@ -29,7 +29,7 @@
          <div class="col"><a href="#">Remove</a></div>
       </div>
    </div><!-- container--> 
-   <div id="queue" class="container">
+   <div class="container">
       <form method="GET" action="/addName">
          <div><input id="nameField" type="text" name="name"></div>
          <div>
@@ -46,6 +46,14 @@
    <div id="textHistory" class="container-fluid">
       No Data Yet
    </div>
+   <h1>Custom Text</h1>
+   <div class="container">
+      <form method="GET" action="/adminReply">
+         <div>Msg: <input id="message" type="text" name="message"></div>
+         <div>To: <input id="to" type="text" name="to"></div>
+         <div><input type="submit" value="Submit"></div>
+      </form>
+   </div><!--Container-->
 
 
 <!-- END. Java script after this --> 
