Gui for displaying timestamps and out history

--- a/static/index.html
+++ b/static/index.html
@@ -54,6 +54,10 @@
          <div><input type="submit" value="Submit"></div>
       </form>
    </div><!--Container-->
+   <h1>Out History</h1>
+   <div id="outHistory" class="container-fluid">
+      No Data Yet
+   </div>
 
 
 <!-- END. Java script after this --> 
