Displaying low priority queue

--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,7 @@
    <style>
       h1   {color: blue;}
       .invalidName    {color: red;}
+      .lowPriority    {color: red;}
    </style>
 </HEAD>
 <BODY>
