--- a/static/index.html
+++ b/static/index.html
@@ -62,6 +62,10 @@
    <div id="outHistory" class="container-fluid">
       No Data Yet
    </div>
+   <h1>Debug</h1>
+   <div id="debug" class="container-fluid">
+      No Data Yet
+   </div>
 
 
 <!-- END. Java script after this --> 
