Added controller list

--- a/static/index.html
+++ b/static/index.html
@@ -67,6 +67,21 @@
       No Data Yet
    </div>
 
+   <h1>Controllers</h1>
+   <ul>
+     <li><a href="http://192.168.1.230">Grid 1</a> (25%) </li>
+     <li><a href="http://192.168.1.231">Grid 2</a> (25%) </li>
+     <li><a href="http://192.168.1.232">Clock</a> (50% Grid, 100% clock) </li>
+     <li><a href="http://192.168.1.234">House Right</a> (100%) </li>
+     <li><a href="http://192.168.1.235">House Left</a> (100%) </li>
+     <li><a href="http://192.168.1.236">Mega Tree 1</a>(30%) </li>
+     <li><a href="http://192.168.1.237">Arches</a> (50%) </li>
+     <li><a href="http://192.168.1.238">Mini Trees</a> (40%) </li>
+     <li><a href="http://192.168.1.239">Snowmen</a> (10%) </li>
+     <li><a href="http://192.168.1.240">Windows</a> (20%) </li>
+     <li><a href="http://192.168.1.241">Mega Tree 2</a> (50%) </li>
+   </ul>
+
 
 <!-- END. Java script after this --> 
 <script
