--- a/static/index.html
+++ b/static/index.html
@@ -62,8 +62,14 @@
    <div id="outHistory" class="container-fluid">
       No Data Yet
    </div>
-   <h1>Debug</h1>
+
+   <h1>Show Debug</h1>
    <div id="debug" class="container-fluid">
+      No Data Yet
+   </div>
+
+   <h1>Clock Debug</h1>
+   <div id="clockdebug" class="container-fluid">
       No Data Yet
    </div>
 
@@ -93,7 +99,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-<script src="admin.js?v=4"></script>
+<script src="admin.js?v=5"></script>
 
 <script type="text/javascript">
    $( document ).ready(function() {
