Included phone number

--- a/static/index.html
+++ b/static/index.html
@@ -21,6 +21,9 @@
       &nbsp;&nbsp;
       <span id="lastRefresh">Never</span>
    </div>
+   <div>
+      513-854-1352
+   </div>
 
    <h1>Queue (<span id="queueSize">##</span>)</h1>
    <div id="queue" class="container-fluid">
