Notify when name approved

--- a/static/index.html
+++ b/static/index.html
@@ -106,7 +106,8 @@
           <!-- container-->
           <div class="container">
             <form method="GET" action="/addName">
-              <div><input id="nameField" type="text" name="name" /></div>
+              <div>Name: <input id="nameField" type="text" name="name" /></div>
+              <div>Phone:<input id="notifyField" type="text" name="notifyField" /></div>
               <div>
                 <input type="radio" name="pos" value="normal" checked />Normal
                 <input type="radio" name="pos" value="first" />First
