Able to remove block and set duration of block

--- a/static/index.html
+++ b/static/index.html
@@ -148,6 +148,14 @@
                   <label for="no">No</label>
                 </div>
               </div>
+              <!-- Row-->
+              <div class="row">
+                <div class="col-2">Length:</div>
+                <div class="col-10">
+                  <input id="length" type="number" name="length" min="10" value="10" step="5" max="600" />
+		</div>
+              </div>
+              <!-- Row-->
               <div><input type="submit" value="Submit" /></div>
             </form>
           </div>
