Strikethough blocked names

--- a/static/index.html
+++ b/static/index.html
@@ -23,6 +23,9 @@
       .invalidName {
         color: red;
       }
+      .blockedName {
+        text-decoration: line-through;
+      }
       .lowPriority {
         color: red;
       }
@@ -238,7 +241,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="admin.js?v=4"></script>
+    <script src="admin.js?v=1"></script>
 
     <script type="text/javascript">
       $(document).ready(function() {
