Remember approved names

--- a/static/index.html
+++ b/static/index.html
@@ -115,6 +115,7 @@
                 <input type="radio" name="pos" value="normal" checked />Normal
                 <input type="radio" name="pos" value="first" />First
                 <input type="radio" name="pos" value="remove" />Remove
+                <input type="radio" name="pos" value="purge" />Purge
               </div>
               <div><input type="submit" value="Submit" /></div>
             </form>
