--- a/static/index.html
+++ b/static/index.html
@@ -221,14 +221,16 @@
             <li>
               <a href="http://192.168.1.232">Clock</a> (50% Grid, 100% clock)
             </li>
-            <li><a href="http://192.168.1.234">House Right</a> (100%)</li>
             <li><a href="http://192.168.1.235">House Left</a> (100%)</li>
+            <li><a href="http://192.168.1.153">Window Left</a> (10%)</li>
             <li><a href="http://192.168.1.236">Mega Tree 1</a>(30%)</li>
             <li><a href="http://192.168.1.237">Arches</a> (50%)</li>
             <li><a href="http://192.168.1.238">Mini Trees</a> (40%)</li>
             <li><a href="http://192.168.1.239">Snowmen</a> (10%)</li>
-            <li><a href="http://192.168.1.240">Windows</a> (10%)</li>
+            <li><a href="http://192.168.1.240">F16v3 Right</a> (100% bush, 10% win)</li>
             <li><a href="http://192.168.1.241">Mega Tree 2</a> (50%)</li>
+            <li><a href="http://192.168.1.154">FppDonate</a> (100%)</li>
+            <li><a href="http://192.168.1.147">FppPower</a> (100%)</li>
           </ul>
         </div>
         <!-- Start Tab #4-->
