--- a/static/index.html
+++ b/static/index.html
@@ -216,10 +216,8 @@
 
           <h1>Controllers</h1>
           <ul>
-            <li><a href="http://192.168.1.230">Grid 1</a> (25%)</li>
-            <li><a href="http://192.168.1.231">Grid 2</a> (25%)</li>
             <li>
-              <a href="http://192.168.1.232">Clock</a> (50% Grid, 100% clock)
+              <a href="http://192.168.1.232">Clock</a> (25% Grid, 50% clock)
             </li>
             <li><a href="http://192.168.1.235">House Left</a> (100%)</li>
             <li><a href="http://192.168.1.153">Window Left</a> (10%)</li>
@@ -231,6 +229,7 @@
             <li><a href="http://192.168.1.241">Mega Tree 2</a> (50%)</li>
             <li><a href="http://192.168.1.154">FppDonate</a> (100%)</li>
             <li><a href="http://192.168.1.147">FppPower</a> (100%)</li>
+            <li><a href="http://192.168.1.156">FppGrid</a> (25%)</li>
           </ul>
         </div>
         <!-- Start Tab #4-->
