Add API status to main page

--- a/static/index.html
+++ b/static/index.html
@@ -45,6 +45,10 @@
       <div class="col-2">Song:</div>
       <div class="col-10" id="current-song">Unknown</div>
     </div>
+    <div class="row">
+      <div class="col-2">API:</div>
+      <div class="col-10" id="current-api-status">Unknown</div>
+    </div>
 
     <!-- Tab controls-->
     <div class="container">
