Add support for admin to select next song

--- a/static/index.html
+++ b/static/index.html
@@ -250,6 +250,15 @@
               <div>Name: <input id="nameField" type="text" name="name" /></div>
               <div><input type="submit" value="Submit" /></div>
             </form>
+          <br><br>
+          <h1>Force Song</h1>
+          <div class="container">
+            <form method="GET" action="/forceSong">
+              <div id="nextAdminSong">Scheduled:</div>
+              <div>Name: <select  id="nextSong" name="nextSong" /><option value="loading">loading...</option></div>
+              <div><input type="submit" value="Submit" /></div>
+            </form>
+
         <!-- Last Tab-->
         </div>
     </div>
