--- a/static/index.html
+++ b/static/index.html
@@ -239,6 +239,11 @@
             <li><a href="http://192.168.1.156">FppGrid</a> (25%)</li>
             <li><a href="http://192.168.1.157">FppTunnel1</a> (20%)</li>
           </ul>
+          <h1>Fppd Warnings</h1>
+          <ul id="fppd_warnings">
+            <li>OK</li>
+          </ul>
+
         </div>
         <!-- Start Tab #4-->
         <div
