Display mappings on admin screen

--- a/static/index.html
+++ b/static/index.html
@@ -215,7 +215,7 @@
         >
           <h1>Info</h1>
           <div>
-            513-854-1352, 888-887-1423
+            888-887-1423
           </div>
 
           <h1>Show Debug</h1>
@@ -225,6 +225,11 @@
 
           <h1>Clock Debug</h1>
           <div id="clockdebug" class="container-fluid gjh-table">
+            No Data Yet
+          </div>
+
+          <h1>Buttons</h1>
+          <div id="buttons" class="container-fluid gjh-table">
             No Data Yet
           </div>
 
@@ -299,7 +304,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="admin.js?v=26"></script>
+    <script src="admin.js?v=27"></script>
 
     <script type="text/javascript">
       $(document).ready(function() {
